# Foucault-pendulum-tracking-system

./: 2021_09_17_14_57_N.csv  CMakeLists.txt  GreenTracking.cpp  README.md  RedTracking.cpp  TestResult  calibration.cpp  calibrationGui.cpp  greenTracing.cpp  guiFunctions.h  main.cpp  main.py  mainDrawGraph.cpp  newCalibration.cpp  newMain.cpp  offlineGraph.cpp  oldMain.cpp  oldMain12Maggio.cpp  ourFunctions.cpp  ourFunctions.h  parallasse.cpp  perspective.cpp  positions.txt  redTracing.cpp  toRaspberry.cpp  utilityFunctions.h
images/: pendolo_in_movimento.mov
oldScripts/: oldMain.cpp  utilityFunctions.cpp  utilityFunctions.h
release/: calibration.txt
release/source/: calibration.cpp  computeDegree.cpp  main.cpp  offlineGraph.cpp
release/source/headers/: guiFunctions.h
